[gd_scene load_steps=10 format=3 uid="uid://dro4y6wgais4q"]

[ext_resource type="Script" path="res://enemies/spawners/gauntlet_enemy_spawner.gd" id="1_s3jp3"]

[sub_resource type="Shader" id="Shader_auh6u"]
code = "shader_type spatial;
render_mode cull_front, unshaded;

uniform vec4 outline_color : source_color;
uniform float outline_width = 1.0;

void vertex() {
	vec4 clip_position = PROJECTION_MATRIX * (MODELVIEW_MATRIX * vec4(VERTEX, 1.0));
	vec3 clip_normal = mat3(PROJECTION_MATRIX) * (mat3(MODELVIEW_MATRIX) * NORMAL);
	
	vec2 offset = normalize(clip_normal.xy) / VIEWPORT_SIZE * clip_position.w * outline_width * 2.0;
	
	clip_position.xy += offset;
	
	POSITION = clip_position;
}

void fragment() {
	ALBEDO = outline_color.rgb;
	if (outline_color.a < 1.0) {
		ALPHA = outline_color.a;
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ev1e8"]
render_priority = 0
shader = SubResource("Shader_auh6u")
shader_parameter/outline_color = Color(0.780392, 0.780392, 0.780392, 1)
shader_parameter/outline_width = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_67qmo"]
next_pass = SubResource("ShaderMaterial_ev1e8")
albedo_color = Color(0.176471, 0.176471, 0.176471, 1)
roughness = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_f4l5o"]
material = SubResource("StandardMaterial3D_67qmo")
size = Vector3(1, 0.25, 1)

[sub_resource type="Shader" id="Shader_j7rm0"]
code = "shader_type spatial;
render_mode cull_front, unshaded;

uniform vec4 outline_color : source_color;
uniform float outline_width = 1.0;

void vertex() {
	vec4 clip_position = PROJECTION_MATRIX * (MODELVIEW_MATRIX * vec4(VERTEX, 1.0));
	vec3 clip_normal = mat3(PROJECTION_MATRIX) * (mat3(MODELVIEW_MATRIX) * NORMAL);
	
	vec2 offset = normalize(clip_normal.xy) / VIEWPORT_SIZE * clip_position.w * outline_width * 2.0;
	
	clip_position.xy += offset;
	
	POSITION = clip_position;
}

void fragment() {
	ALBEDO = outline_color.rgb;
	if (outline_color.a < 1.0) {
		ALPHA = outline_color.a;
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lee6a"]
render_priority = 0
shader = SubResource("Shader_j7rm0")
shader_parameter/outline_color = Color(0.780392, 0.780392, 0.780392, 1)
shader_parameter/outline_width = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_460j1"]
next_pass = SubResource("ShaderMaterial_lee6a")
albedo_color = Color(0.176471, 0.176471, 0.176471, 1)
roughness = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_ao70p"]
material = SubResource("StandardMaterial3D_460j1")
size = Vector3(1, 0.5, 1)

[node name="GauntletEnemySpawner" type="Node3D"]
script = ExtResource("1_s3jp3")

[node name="TopSpinner" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_f4l5o")
skeleton = NodePath("")

[node name="MiddleSpinner" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -0.45, 2.08165e-12)
mesh = SubResource("BoxMesh_ao70p")
skeleton = NodePath("")

[node name="BottomSpinner" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -1.05, 2.08165e-12)
mesh = SubResource("BoxMesh_ao70p")
skeleton = NodePath("")
